--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivity"
+            android:name=".GUI.comun.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,57 +23,57 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".pacientes.MenuPacientesActivity" />
-        <activity android:name=".personal.MenuPersonalActivity" />
-        <activity android:name=".pacientes.RealizarSolicitudActivity">
+        <activity android:name=".GUI.pacientes.MenuPacientesActivity" />
+        <activity android:name=".GUI.personal.MenuPersonalActivity" />
+        <activity android:name=".GUI.pacientes.RealizarSolicitudActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".pacientes.MenuPacientesActivity" />
+                android:value=".GUI.pacientes.MenuPacientesActivity" />
         </activity>
-        <activity android:name=".pacientes.MisSolicitudesActivity">
+        <activity android:name=".GUI.pacientes.MisSolicitudesActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".pacientes.MenuPacientesActivity" />
+                android:value=".GUI.pacientes.MenuPacientesActivity" />
         </activity>
-        <activity android:name=".pacientes.SeleccionMenuActivity">
+        <activity android:name=".GUI.pacientes.SeleccionMenuActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".pacientes.MenuPacientesActivity" />
+                android:value=".GUI.pacientes.MenuPacientesActivity" />
         </activity>
-        <activity android:name=".pacientes.MisAvisosActivity">
+        <activity android:name=".GUI.pacientes.MisAvisosActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".pacientes.MenuPacientesActivity" />
+                android:value=".GUI.pacientes.MenuPacientesActivity" />
         </activity>
-        <activity android:name=".personal.ListarSolicitudesActivity">
+        <activity android:name=".GUI.personal.ListarSolicitudesActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".personal.MenuPersonalActivity" />
+                android:value=".GUI.personal.MenuPersonalActivity" />
         </activity>
-        <activity android:name=".personal.RechazarSolicitudActivity">
+        <activity android:name=".GUI.personal.RechazarSolicitudActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".personal.ListarSolicitudesActivity" />
+                android:value=".GUI.personal.ListarSolicitudesActivity" />
         </activity>
-        <activity android:name=".personal.ListarMenusActivity">
+        <activity android:name=".GUI.personal.ListarMenusActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".personal.MenuPersonalActivity" />
+                android:value=".GUI.personal.MenuPersonalActivity" />
         </activity>
-        <activity android:name=".personal.ConfigurarAvisosActivity">
+        <activity android:name=".GUI.personal.ConfigurarAvisosActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".personal.MenuPersonalActivity" />
+                android:value=".GUI.personal.MenuPersonalActivity" />
         </activity>
-        <activity android:name=".personal.MapaCamasActivity">
+        <activity android:name=".GUI.personal.MapaCamasActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".personal.MenuPersonalActivity" />
+                android:value=".GUI.personal.MenuPersonalActivity" />
         </activity>
-        <activity android:name=".personal.DetallePacienteActivity">
+        <activity android:name=".GUI.personal.DetallePacienteActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".personal.MapaCamasActivity" />
+                android:value=".GUI.personal.MapaCamasActivity" />
         </activity>
     </application>
 
