Se ha finalizado el servicio para mostrar avisos de un paciente. Se ha añadido la activity para mostrar la información del hospital.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".GUI.pacientes.MenuPacientesActivity" />
         </activity>
+        <activity android:name=".GUI.pacientes.InfoHospitalActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".GUI.pacientes.MenuPacientesActivity" />
+        </activity>
         <activity android:name=".GUI.personal.ListarSolicitudesActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
