--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/nurse"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -81,7 +81,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".gui.personal.MapaHospitalarioActivity" />
         </activity>
-        <activity android:name=".gui.comun.InurseActivity"></activity>
+        <activity android:name=".gui.comun.InurseActivity" />
+        <activity android:name=".gui.personal.ListarAvisosActivos">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".gui.personal.MenuPersonalActivity" />
+        </activity>
     </application>
 
 </manifest>
