--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,72 +17,114 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".gui.comun.LoginActivity"
-            android:label="@string/app_name">
+            android:label="@string/login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".gui.pacientes.MenuPacientesActivity" />
-        <activity android:name=".gui.personal.MenuPersonalActivity" />
-        <activity android:name=".gui.pacientes.RealizarSolicitudActivity">
+
+        <activity
+            android:name=".gui.pacientes.MenuPacientesActivity"
+            android:label="@string/menu_principal" />
+
+        <activity
+            android:name=".gui.personal.MenuPersonalActivity"
+            android:label="@string/menu_principal" />
+
+        <activity
+            android:name=".gui.pacientes.RealizarSolicitudActivity"
+            android:label="@string/realizar_solicitud">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".gui.pacientes.MenuPacientesActivity" />
         </activity>
-        <activity android:name=".gui.pacientes.MisSolicitudesActivity">
+
+        <activity
+            android:name=".gui.pacientes.MisSolicitudesActivity"
+            android:label="@string/mis_solicitudes">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".gui.pacientes.MenuPacientesActivity" />
         </activity>
-        <activity android:name=".gui.pacientes.SeleccionMenuActivity">
+
+        <activity
+            android:name=".gui.pacientes.SeleccionMenuActivity"
+            android:label="@string/menus">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".gui.pacientes.MenuPacientesActivity" />
         </activity>
-        <activity android:name=".gui.pacientes.MisAvisosActivity">
+
+        <activity
+            android:name=".gui.pacientes.MisAvisosActivity"
+            android:label="@string/avisos">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".gui.pacientes.MenuPacientesActivity" />
         </activity>
-        <activity android:name=".gui.pacientes.InfoHospitalActivity">
+
+        <activity
+            android:name=".gui.pacientes.InfoHospitalActivity"
+            android:label="@string/informacion">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".gui.pacientes.MenuPacientesActivity" />
         </activity>
-        <activity android:name=".gui.personal.ListarSolicitudesActivity">
+
+        <activity
+            android:name=".gui.personal.ListarSolicitudesActivity"
+            android:label="@string/solicitudes">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".gui.personal.MenuPersonalActivity" />
         </activity>
-        <activity android:name=".gui.personal.RechazarSolicitudActivity">
+
+        <activity
+            android:name=".gui.personal.RechazarSolicitudActivity"
+            android:label="@string/rechazar_solicitud">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".gui.personal.ListarSolicitudesActivity" />
         </activity>
-        <activity android:name=".gui.personal.ListarMenusActivity">
+
+        <activity
+            android:name=".gui.personal.ListarMenusActivity"
+            android:label="@string/menus">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".gui.personal.MenuPersonalActivity" />
         </activity>
-        <activity android:name=".gui.personal.ConfigurarAvisosActivity">
+
+        <activity
+            android:name=".gui.personal.ConfigurarAvisosActivity"
+            android:label="@string/configurar_avisos">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".gui.personal.MenuPersonalActivity" />
         </activity>
-        <activity android:name=".gui.personal.MapaHospitalarioActivity">
+
+        <activity
+            android:name=".gui.personal.MapaHospitalarioActivity"
+            android:label="@string/mapa_camas">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".gui.personal.MenuPersonalActivity" />
         </activity>
-        <activity android:name=".gui.personal.DetallePacienteActivity">
+
+        <activity
+            android:name=".gui.personal.DetallePacienteActivity"
+            android:label="@string/detalle_paciente">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".gui.personal.MapaHospitalarioActivity" />
         </activity>
+
         <activity android:name=".gui.comun.InurseActivity" />
-        <activity android:name=".gui.personal.ListarAvisosActivos">
+
+        <activity
+            android:name=".gui.personal.ListarAvisosActivos"
+            android:label="@string/avisos_activos">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".gui.personal.MenuPersonalActivity" />
